--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ python:
     - 3.5
     - 3.6
 install:
-    - pip install --user .
+    - pip install .
     - sudo pip install .
 script:
     - [ -e ~/0wned ]
