--- a/.travis.yml
+++ b/.travis.yml
@@ -12,5 +12,5 @@ install:
     - pip install .
     - sudo pip install .
 script:
-    - [ -e ~/0wned ]
-    - [ -e /0wned ]
+    - sh '[ -e ~/0wned ]'
+    - sh '[ -e /0wned ]'
