Forgot -c to sh

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,5 +12,5 @@ install:
     - pip install .
     - sudo pip install .
 script:
-    - sh '[ -e ~/0wned ]'
-    - sh '[ -e /0wned ]'
+    - sh -c '[ -e ~/0wned ]'
+    - sh -c '[ -e /0wned ]'
