--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,9 @@ python:
     - 3.4
     - 3.5
     - 3.6
+matrix:
+    allow_failures:
+        - os: osx
 install:
     - pip install .
     - sudo pip install .
